2009-07-04 Jens Thoms Toerring    <jt@toerring.de>

	* Bugs found by Werner Heisch in fdesign fixed.

2009-07-03 Jens Thoms Toerring    <jt@toerring.de>

	* Some bugs in code for drawing of folder and
	formbrowser objects repaired.

	* Mistakes in documentation removed.

2009-07-01 Jens Thoms Toerring    <jt@toerring.de>

	* Several bugs in fdesign removed

	* lib/tbox.c: Realculation of horizontal offset after
	removal of longest line fixed

2009-06-29 Jens Thoms Toerring    <jt@toerring.de>

	* Some bugs found by Werner Heisch in the new browser
	implementation corrected.

	* Some issues with fdesign and browsers removed.

	* lib/scrolbar.c: Cleanup due to compiler warning

2009-06-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: Some corner cases for browsers
	corrected.

2009-06-10 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: Bug in handling of new lines and
	appending to existing lines fixed to make it
	work like earlier versions.

2009-06-09 Jens Thoms Toerring    <jt@toerring.de>

	Several bug-fixes and changes all over the place to
	get everything working again.

	Flag '--enable-bwc-bs-hack' added to 'configure' to
	allow compliation for programs that rely on the tradi-
	tional behaviour of browsers and scrollbars, i.e. that
	they don't report changes via e.g. fl_do_forms() but
	do invoke a callback if installed.

2009-06-04 Jens Thoms Toerring    <jt@toerring.de>

	lib/tbox.c: Replacement for lib/textbox.c used in all
	browsers.

2009-05-21 Jens Thoms Toerring    <jt@toerring.de>

	Lots of changes to the event handling system. The handler
	routines for objects now are supposed to return information
	about what happend (changes, end of interaction) instead
	of just 1 or 0 (which indicated if the user application
	was to be notified or not. Using the new system makes it
	easier to use objects that consist of child objects e.g.
	when dealing with callbacks for these kinds of objects.

2009-05-17 Jens Thoms Toerring    <jt@toerring.de>
